2011-05-23 tatuya
* Fix the issue that the Stock view on Production Order does not show anything.

2011-04-14 yusei
* Remove old unnecessary tales expression from relation string fields.

2010-11-05 yusei
* Modify variation category list in the field library and stop showing base category name.

2010-10-09 yusei
* Fix a typo in production_order_workflow/scripts/Order_buildPackingList.

2010-05-24 kazuhiko
* Improve activity dependencies for Delivery_updateAppliedRule, eg. delivery.activate(tag='(path)_updateAppliedRule', after_tag='(path)_expand').Delivery_updateAppliedRule(activate_kw={'tag':'(path)_expand'})

2010-03-02 yusei
* Remove short title.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2008-09-16 Kazuhiko
* revise production_packing_list_builder and production_report_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Production Packing List and Production Report.

2008-07-18 luke
* bugfix release 1.0rc2 - delete all production_order_* selections from system after updating

2008-07-10 luke
* production planning using planning box

2008-07-07 luke
* added material and service consumption views

2008-07-01 luke
* added support for automatic numeration using int_index
* restricted specialise (transformation) on order line to be chosen only for those defined by resource, made them automatic set in some cases

2008-06-27 luke
* updated production packing list workflow to be consistent with current packing list workflow
* reference on deliveries - orders, packing lists and reports are now automatically set

2008-06-26 luke
* updated production order workflow to be consistent with current order workflow
* continued proxification of forms

2008-06-24 luke
* updated portal types' definitions
* proxified, cleaned up and made forms more consistent

2008-06-03 vincentd
* Add all rights to manager in :
production_order_workflow  :  Confirmed, Cancelled