@@ -10,12 +10,12 @@
             <key> <string>delegated_list</string> </key>
             <value>
               <list>
-                <string>title</string>
                 <string>columns</string>
-                <string>list_method</string>
-                <string>selection_name</string>
                 <string>editable_columns</string>
                 <string>list_action</string>
+                <string>list_method</string>
+                <string>selection_name</string>
+                <string>title</string>
               </list>
             </value>
         </item>
@@ -85,7 +85,7 @@
                           <string>Resource</string>
                         </tuple>
                         <tuple>
-                          <string>variation_title</string>
+                          <string>variation_category_item_list</string>
                           <string>Variation</string>
                         </tuple>
                         <tuple>
@@ -93,15 +93,11 @@
                           <string>Node</string>
                         </tuple>
                         <tuple>
-                          <string>movement.start_date</string>
-                          <string>Date</string>
+                          <string>consumption_item</string>
+                          <string>Consumption</string>
                         </tuple>
                         <tuple>
-                          <string>inventory</string>
-                          <string>Quantity</string>
-                        </tuple>
-                        <tuple>
-                          <string>quantity_unit</string>
+                          <string>quantity_unit_item</string>
                           <string>Unit</string>
                         </tuple>
                         <tuple>
@@ -168,10 +164,7 @@
   </record>
   <record id="2" aka="AAAAAAAAAAI=">
     <pickle>
-      <tuple>
-        <global name="Method" module="Products.Formulator.MethodField"/>
-        <tuple/>
-      </tuple>
+      <global name="Method" module="Products.Formulator.MethodField"/>
     </pickle>
     <pickle>
       <dictionary>
